Previous: adjusted gap and spacing to be consisted across multiple page sections. Fixed Casestudy context and tension sections.

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -7,5 +7,9 @@ main{
 		padding: 0 var(--padding-2xl);
 		gap: var(--gap-lg);
 		width: 100%;
+
+		& article{
+			width: 100%;
+		}
 	}
 }
