--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -162,7 +162,7 @@ body {
 }
 
 .divider {
-	background-color: var(--main-black);
+	background-color: var(--border-color);
 	height: var(--border);
 	border-radius: var(--radius-lg);
 
