--- a/src/assets/styles/tokens/_colors.scss
+++ b/src/assets/styles/tokens/_colors.scss
@@ -27,5 +27,7 @@
 	--overlay-white: rgba(254, 254, 254, 0.3);
 	--bx-shadows: rgba(0, 0, 0, 0.18);
 
+	--border-color: #c1c1c1;
+
 	--linear-gradient: linear-gradient(180deg, #666666 0%, #181818 91.41%)
 }
